[gd_scene load_steps=6 format=3 uid="uid://bxp0hhpdubjky"]

[ext_resource type="Texture2D" uid="uid://cbrn8x7iydw63" path="res://Assets/GUI/vertical-medium.png" id="1_0vjqg"]
[ext_resource type="Script" path="res://Menus/detailed_room_info.gd" id="1_kltg5"]
[ext_resource type="PackedScene" uid="uid://b220oo4s6vl43" path="res://Menus/mission_enemy_panel.tscn" id="2_m4fqc"]
[ext_resource type="FontFile" uid="uid://uqx0pemtyyk7" path="res://Themes/zekton rg.otf" id="3_sgklb"]
[ext_resource type="Texture2D" uid="uid://5ishrvrpc8ew" path="res://Assets/Unknown.png" id="4_l5xc7"]

[node name="DetailedRoomInfo" type="Node2D"]
script = ExtResource("1_kltg5")

[node name="Vertical-medium" type="Sprite2D" parent="."]
position = Vector2(355.279, 487.437)
scale = Vector2(0.84, 0.84)
texture = ExtResource("1_0vjqg")

[node name="EnemyPanel" parent="." instance=ExtResource("2_m4fqc")]
offset_left = 94.7477
offset_top = 245.041
offset_right = 94.7477
offset_bottom = 245.041
scale = Vector2(0.9, 0.9)

[node name="BossSprite" type="Sprite2D" parent="."]
position = Vector2(136.1, 176.618)
scale = Vector2(0.2, 0.2)
texture = ExtResource("4_l5xc7")

[node name="BossName" type="Label" parent="."]
offset_left = 81.7556
offset_top = 24.1794
offset_right = 621.755
offset_bottom = 51.1794
theme_override_font_sizes/font_size = 22
text = "Boss: NAME"
horizontal_alignment = 1

[node name="Label3" type="Label" parent="."]
offset_left = 318.065
offset_top = 117.194
offset_right = 434.065
offset_bottom = 136.194
text = "Objectives"

[node name="ObjectivesGrid" type="GridContainer" parent="."]
offset_left = 314.926
offset_top = 142.011
offset_right = 354.926
offset_bottom = 292.011
theme_override_constants/v_separation = 75

[node name="Control" type="Control" parent="ObjectivesGrid"]
layout_mode = 2

[node name="Label2" type="Label" parent="ObjectivesGrid/Control"]
layout_mode = 0
offset_left = 2.97121
offset_top = -1.63454
offset_right = 377.971
offset_bottom = 60.3655
theme_override_fonts/font = ExtResource("3_sgklb")
theme_override_font_sizes/font_size = 18
text = "Main Objective - Kill the boss"
autowrap_mode = 2

[node name="Control2" type="Control" parent="ObjectivesGrid"]
layout_mode = 2

[node name="Label2" type="Label" parent="ObjectivesGrid/Control2"]
layout_mode = 0
offset_left = 2.97121
offset_top = -1.63454
offset_right = 377.971
offset_bottom = 60.3655
theme_override_fonts/font = ExtResource("3_sgklb")
theme_override_font_sizes/font_size = 18
autowrap_mode = 2

[node name="Control3" type="Control" parent="ObjectivesGrid"]
layout_mode = 2

[node name="Label2" type="Label" parent="ObjectivesGrid/Control3"]
layout_mode = 0
offset_left = 2.97121
offset_top = -1.63454
offset_right = 377.971
offset_bottom = 60.3655
theme_override_fonts/font = ExtResource("3_sgklb")
theme_override_font_sizes/font_size = 18
autowrap_mode = 2

[node name="SpecialsGrid" type="GridContainer" parent="."]
offset_left = 29.0939
offset_top = 450.359
offset_right = 29.0939
offset_bottom = 950.359
theme_override_constants/v_separation = 80

[node name="Special1" type="Control" parent="SpecialsGrid"]
layout_mode = 2

[node name="Description" type="Label" parent="SpecialsGrid/Special1"]
layout_mode = 0
offset_left = -0.810184
offset_top = -21.4784
offset_right = 669.19
offset_bottom = 56.5216
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 1
theme_override_fonts/font = ExtResource("3_sgklb")
theme_override_font_sizes/font_size = 18
text = "EXPLOSIVE MISSLES - Deals 21 damage spread over every allied unit in a diamond tile area, centered on a random allied unit"
autowrap_mode = 2

[node name="Special2" type="Control" parent="SpecialsGrid"]
layout_mode = 2

[node name="Description" type="Label" parent="SpecialsGrid/Special2"]
layout_mode = 0
offset_left = -0.810184
offset_top = -21.4784
offset_right = 669.19
offset_bottom = 56.5216
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 1
theme_override_fonts/font = ExtResource("3_sgklb")
theme_override_font_sizes/font_size = 18
text = "Explosive Missiles - Deals 21 damage spread over every allied unit in a diamond tile area, centered on a random allied unit"
autowrap_mode = 2

[node name="Special3" type="Control" parent="SpecialsGrid"]
layout_mode = 2

[node name="Description" type="Label" parent="SpecialsGrid/Special3"]
layout_mode = 0
offset_left = -0.810184
offset_top = -21.4784
offset_right = 669.19
offset_bottom = 56.5216
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 1
theme_override_fonts/font = ExtResource("3_sgklb")
theme_override_font_sizes/font_size = 18
text = "Explosive Missiles - Deals 21 damage spread over every allied unit in a diamond tile area, centered on a random allied unit"
autowrap_mode = 2

[node name="Special4" type="Control" parent="SpecialsGrid"]
layout_mode = 2

[node name="Description" type="Label" parent="SpecialsGrid/Special4"]
layout_mode = 0
offset_left = -0.810184
offset_top = -21.4784
offset_right = 669.19
offset_bottom = 56.5216
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 1
theme_override_fonts/font = ExtResource("3_sgklb")
theme_override_font_sizes/font_size = 18
text = "Explosive Missiles - Deals 21 damage spread over every allied unit in a diamond tile area, centered on a random allied unit"
autowrap_mode = 2

[node name="Special5" type="Control" parent="SpecialsGrid"]
layout_mode = 2

[node name="Description" type="Label" parent="SpecialsGrid/Special5"]
layout_mode = 0
offset_left = -0.810184
offset_top = -21.4784
offset_right = 669.19
offset_bottom = 56.5216
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 1
theme_override_fonts/font = ExtResource("3_sgklb")
theme_override_font_sizes/font_size = 18
text = "Explosive Missiles - Deals 21 damage spread over every allied unit in a diamond tile area, centered on a random allied unit"
autowrap_mode = 2

[node name="Special6" type="Control" parent="SpecialsGrid"]
layout_mode = 2

[node name="Description" type="Label" parent="SpecialsGrid/Special6"]
layout_mode = 0
offset_left = -0.810184
offset_top = -21.4784
offset_right = 669.19
offset_bottom = 56.5216
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 1
theme_override_fonts/font = ExtResource("3_sgklb")
theme_override_font_sizes/font_size = 18
text = "Explosive Missiles - Deals 21 damage spread over every allied unit in a diamond tile area, centered on a random allied unit"
autowrap_mode = 2

[node name="Label2" type="Label" parent="."]
offset_left = 21.6109
offset_top = 401.632
offset_right = 281.611
offset_bottom = 424.632
theme_override_font_sizes/font_size = 18
text = "Mechanics Per Turn:"

[node name="SpecialsPerTurn" type="Label" parent="."]
offset_left = 286.32
offset_top = 402.154
offset_right = 326.32
offset_bottom = 425.154
theme_override_font_sizes/font_size = 18
text = "2"
